# Python-Authorizer

./: .gitignore  README.md  app.py  pyproject.toml
python_authorizer/: authorization_app.py  authorizer.py
python_authorizer/email/: email_authorizer.py  email_sender.py
python_email_auth/: email_auth.py  email_auth_app.py  email_sender.py
tests/: test_python_email_auth.py
