[tool.poetry]
name = "python_email_auth"
version = "0.1.0"
description = ""
authors = ["Ian Liu <ipuppyian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sendgrid = "^6.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
